<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="parse_app_id">BH64VIC5VgSfnpAZ0k24q2XghUszuUjnleslRZag</string>
    <string name="parse_client_key">pTyDW3oMjr6FcPoZAEAH0rfxMpfD6luPNM2CSSwX</string>
    <string name="facebook_app_id">324053601122888</string>
    <string name="app_name">Fiscal a Bordo Debug</string>
    <string name="action_settings">Mais Aplicativos</string>
    <string name="company">Nome da empresa</string>
    <string name="company_desc">Empresa responsável pelo transporte</string>
    <string name="title">Passageiro Ligeiro</string>
    <string name="velocity">0 Km/h</string>
    <string name="velocity_desc">Velocidade do veículo</string>
    <string name="belt">Cinto de segurança indisponível</string>
    <string name="stand">Coletivo Superlotado</string>
    <string name="bug">Falta higienização</string>
    <string name="broke">Quebrou no caminho</string>
    <string name="confirm">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="public_data">Identificar-se</string>
    <string name="public_data_subtitle">Desejo me identificar, do contrário o registro será publicado anonimamente.</string>
    <string name="msg_finish">Obrigado por fazer a denúncia.\n\nDesejamos a você uma excelente viagem.</string>
    <string name="title_finish">Denúncia Feita</string>
    <string name="more_apps_link">market://search?q=pub:Moolab</string>
    <string name="fast">Reportar velocidade do veículo</string>
    <string name="title_activity_splash">Fiscal a Bordo</string>
    <string name="no_gps">Ative o GPS para \nmonitorar a velocidade.</string>
    <string name="no_company">Preencha o nome da empresa.</string>
    <string name="call_prf">Ligar para PRF</string>
    <string name="finish">Finalizar Denúncia</string>

</resources>
