<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_dark"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/padding_intern"
                android:paddingRight="@dimen/padding_intern"
                android:text="@string/title_finish"
                android:textSize="@dimen/text_xlarge" />

            <TextView
                android:id="@+id/msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/padding_intern"
                android:paddingRight="@dimen/padding_intern"
                android:text="@string/msg_finish"
                android:textSize="@dimen/text_large" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="right|center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/action_call"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/padding_intern"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/padding_intern"
            android:text="@string/call_prf"
            android:textAllCaps="true"
            android:textColor="@color/fab"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/action_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/padding_intern"
            android:text="@string/finish"
            android:textAllCaps="true"
            android:textColor="@color/fab"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>
</LinearLayout>