<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:orientation="vertical"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/double_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/velocity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/is_fast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:src="@drawable/ic_fast"
                        android:visibility="gone" />
                    <ImageView
                        android:id="@+id/is_belt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:src="@drawable/ic_belt"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/is_stand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:src="@drawable/ic_stand"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/is_bug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:src="@drawable/ic_bug"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/is_broke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:src="@drawable/ic_broke"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/company"
                android:inputType="textPersonName"
                android:padding="@dimen/padding_intern"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/text_dark"
                android:textColorHint="@color/text_light"
                android:textSize="@dimen/text_large" />

            <LinearLayout
                android:id="@+id/facebook_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_intern"
                android:layout_marginRight="@dimen/padding_intern"
                android:orientation="horizontal"
                android:background="?selectableItemBackground"
                android:padding="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/public_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/public_data"
                        android:textColor="@color/text_dark"
                        android:textSize="@dimen/text_large" />
                </LinearLayout>

                <Switch
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <TextView
                android:id="@+id/public_data_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/padding_intern"
                android:paddingRight="@dimen/padding_intern"
                android:text="@string/public_data_subtitle"
                android:textSize="@dimen/text_medium" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/padding_intern"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/action_ok"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/padding_intern"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/padding_intern"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>
</LinearLayout>